@@ -2,11 +2,11 @@ package org.example;
 import java.util.Scanner;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
+
 
 public class Main {
     static List<databaseObject> database = new ArrayList<>();
-    static Scanner s = new Scanner(System.in);
     public static void mainMenu(){
         System.out.println("---------------------------------------");
         System.out.println("158093 | 2 rok 3 semestr | PO - projekt");
@@ -19,6 +19,32 @@ public class Main {
         System.out.println("6. Operacja zawarta w interfejsie");
         System.out.println("7. Zakończ");
         System.out.print("Wybrana akcja: ");
+    }
+    private static String getUserInput(String prompt) {
+        Scanner scanner = new Scanner(System.in);
+        String userInput = "";
+        while (userInput.trim().isEmpty() ) {
+            System.out.println(prompt);
+            userInput = scanner.nextLine().trim();
+            if (userInput.trim().isEmpty()) System.out.println("Wartość nie może być pusta!");
+        }
+        return userInput;
+    }
+    private static int getUserInputIntiger(String prompt) {
+        Scanner scanner = new Scanner(System.in);
+        String userInput = "";
+        while (userInput.trim().isEmpty()) {
+            System.out.println(prompt);
+            userInput = scanner.nextLine().trim();
+            if (userInput.trim().isEmpty()) System.out.println("Wartość nie może być pusta!");
+            try {
+                Integer.parseInt(userInput);
+            } catch (NumberFormatException ex) {
+                System.out.println("Nie podano wartosci licznowej");
+                userInput = "";
+            }
+        }
+        return Integer.parseInt(userInput);
     }
     public static void newObjectMenu(){
         System.out.println("---------------------------------------");
@@ -42,17 +68,37 @@ public class Main {
         System.out.println("5. Cofnij");
         System.out.print("Wybrana akcja: ");
     }
-
     public static void waitForAction(){
         System.out.println("Naciśnij dowolny przycisk, aby kontynuować...");
-        s.nextLine();
+        Scanner scanner = new Scanner(System.in);
+        scanner.nextLine();
         System.out.print("\033[H\033[2J");
         System.out.flush();
     }
-    public static void newElement(){
-        database.add(new book("","","",11,1,literaryGenres.EKOLOGIA,"123"));
-        database.add(new book("abc","aa","aa",11,1,literaryGenres.EKOLOGIA,"123"));
-        database.add(new audiobook("","","",11,1,literaryGenres.EKOLOGIA,1));
+    public static void newElement(int type){
+        String name = getUserInput("Podaj nazwę książki:");
+        String title = getUserInput("Podaj tytuł książki:");
+        String author = getUserInput("Podaj autora książki:");
+        int publicationDate = getUserInputIntiger("Podaj rok publikacji: ");
+        int length = getUserInputIntiger("Podaj ilość stron: ");
+        switch (type){
+            case 1:
+                break;
+            case 2:
+                break;
+            case 3:
+                String ISBN = getUserInput("Podaj numer ISBN: ");
+                database.add(new book(name,title,author,publicationDate,length,item.setGenre(),ISBN));
+                break;
+            case 4:
+                float size = getUserInputIntiger("Podaj wielkość pliku");
+                database.add(new audiobook(name,title,author,publicationDate,length,item.setGenre(),size));
+                break;
+            default:
+                System.out.println("Coś poszło nie tak");
+                break;
+        }
+
     }
     public static void displayAllElements(){
         if (database.isEmpty())System.out.println("Nie znalezniono obiektów do wyświetlenia");
@@ -68,7 +114,7 @@ public class Main {
     public static void displayObjectsByType(Class<?> type) {
         List<databaseObject> temp = database.stream()
                 .filter(obj -> type.isAssignableFrom(obj.getClass()))
-                .collect(Collectors.toList());
+                .toList();
         if (temp.isEmpty()) System.out.println("Nie znalezniono obiektów do wyświetlenia");
          else {
             try {
@@ -82,7 +128,7 @@ public class Main {
     public static void displayObjectsByNameContains(String substring) {
         List<databaseObject> temp = database.stream()
                 .filter(obj -> obj.getName().contains(substring))
-                .collect(Collectors.toList());
+                .toList();
         if (temp.isEmpty()) System.out.println("Nie znalezniono obiektów do wyświetlenia");
         else {
             try {
@@ -103,56 +149,44 @@ public class Main {
             removed = false;
         }
         if(removed) System.out.println("Usunieto element od id: "+ id);
-        else System.out.println("Obiekt od id:" + id + " nie istnieje");
-    }
-    public static void newObject(){
-
+        else System.out.println("Obiekt o id: " + id + " nie istnieje");
     }
     public static void main(String[] args) {
         boolean isRunning = true;
-        String message;
         while (isRunning){
             mainMenu();
-            message = s.nextLine();
-            switch (message){
+            switch (getUserInput("Wybierz akcję: ")){
                 case "1": //Dodawanie nowego obiektu - w trakcie
                     newObjectMenu();
-                    message = s.nextLine();
-                    switch (message) {//Wybór typu
+                    switch (getUserInput("Wybierz akcję: ")) {//Wybór typu
                         case "1":
                             break;
                         case "2":
                             break;
                         case "3":
+                            System.out.println("Tworzę nowy obiekt typu: ksiazka");
+                            newElement(3);
                             break;
                         case "4":
+                            System.out.println("Tworzę nowy obiekt typu: audiobook");
+                            newElement(4);
                             break;
                         case "5":
                             break;
                         default:
                             System.out.println("Nieprawidlowa opcja");
-                            newElement();
                             break;
                     }
                     break;
                 case "2": //Usuwanie obiektu
-                    System.out.println("Podaj ID obiektu, który chcesz usunąć: ");
-                    message = s.nextLine();
-                    try {
-                        Integer.parseInt(message);
-                    } catch (NumberFormatException e) {
-                        System.out.println("Nie podano wartosci licznowej: ");
-                        break;
-                    }
-                    removeObjectById(Integer.parseInt(message));
+                    removeObjectById(getUserInputIntiger("Podaj id obiektu do usunięcia: "));
                     break;
                 case "3": //Wyświetlanie wszystkich elementów
                     displayAllElements();
                     break;
                 case "4": //Wyświetlanie danego typu elementów
                     displayObjectByTypeMenu();
-                    message = s.nextLine();
-                    switch (message) { //Wybór typu
+                    switch (getUserInput("Wybierz akcję: ")) { //Wybór typu
                         case "1":
                             break;
                         case "2":
@@ -171,9 +205,7 @@ public class Main {
                     }
                     break;
                 case "5": //Wyświetalnie elemenetów z ciągiem znaków w nazwie
-                    System.out.println("Podaj ciąg znaków: ");
-                    message = s.nextLine();
-                    displayObjectsByNameContains(message);
+                    displayObjectsByNameContains(getUserInput("Podaj ciąg znaków: "));
                     break;
                 case "6": //Operacja z interfejstu - w trakcie
                     break;
